--- a/prize-draw-frontend/src/index.css
+++ b/prize-draw-frontend/src/index.css
@@ -16,3 +16,19 @@ a, a:hover {
 html, body {
     background-color: #FFF;
   }
+
+/*------- Prize Draw Button ------ */
+
+.prize-draw-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  margin-top: 10px;
+  background-color: #B0CBEF;
+  font-weight: bold;
+  cursor: pointer;
+  width: 240px;
+}
