--- a/prize-draw-frontend/src/routes/Admin/AdminArea/styles.css
+++ b/prize-draw-frontend/src/routes/Admin/AdminArea/styles.css
@@ -70,4 +70,7 @@
     .prize-draw-container {
         width: 450px;
     }
+    .prize-draw-admin-area-welcome p {
+        font-size: 20px;
+    }
 }
