--- a/prize-draw-frontend/src/routes/Admin/DrawDetails/styles.css
+++ b/prize-draw-frontend/src/routes/Admin/DrawDetails/styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     min-height: 562px;
-    padding: 10px;
+    padding: 40px;
 }
 
 .prize-draw-details-name {
@@ -76,7 +76,7 @@
 
 .prize-draw-details-content {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     width: 355px;
     padding: 10px;
     border-left: 10px solid #EEE;
@@ -137,6 +137,13 @@
     background-color: #B0CBEF;
 }
 
+.prize-draw-details-list-participants-empty {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+}
+
 /* ------- LIST LOGS ------- */
 
 .prize-draw-details-list-logs {
@@ -174,9 +181,12 @@
 
 .prize-draw-details-timer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     background-color: #EEE;
     width: 355px;
+    height: 90px;
     padding: 10px;
     border-bottom-right-radius: 12px;
     border-bottom-left-radius: 12px;
@@ -185,6 +195,22 @@
 .prize-draw-details-timer p {
     font-size: 16px;
     font-weight: bold;
+}
+
+.prize-draw-details-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    margin-top: 10px;
+    background-color: #000;
+    font-weight: bold;
+    opacity: 0.4;
+    cursor: not-allowed;
+    width: 240px;
+    color: #FFF;
 }
 
 @media (min-width: 760px) {
@@ -223,7 +249,7 @@
 
     .prize-draw-details-timer {
         width: 500px;
-        height: 50px;
+        height: 90px;
         align-items: center;
     }
 
@@ -245,6 +271,10 @@
 
     .prize-draw-details-list-participant tbody tr {
         height: 40px;
+    }
+
+    .prize-draw-details-list-participants-empty {
+        width: 500px;
     }
 
     .prize-draw-details-list-logs {
@@ -290,7 +320,7 @@
 
     .prize-draw-details-timer {
         width: 900px;
-        height: 60px;
+        height: 90px;
     }
 
     .prize-draw-details-list-participant {
@@ -299,6 +329,10 @@
     
     .prize-draw-details-table-list-participants {
         width: 850px;
+    }
+
+    .prize-draw-details-list-participants-empty {
+        width: 900px;
     }
 
     .prize-draw-details-list-logs {
