--- a/prize-draw-frontend/src/routes/ClientHome/PrizeDrawPage/styles.css
+++ b/prize-draw-frontend/src/routes/ClientHome/PrizeDrawPage/styles.css
@@ -145,3 +145,14 @@
     cursor: pointer;
     width: 200px;
 }
+
+.prize-draw-page-participant-registered {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.prize-draw-page-participant-registered span {
+    font-size: 12px;
+    margin-top: 20px;
+}
